--- a/css/media.css
+++ b/css/media.css
@@ -1,1 +1,29 @@
-media.css
+
+
+
+/*Para mirar como se hace media*/
+@media (min-width: 650px){
+	body{
+		background-image: url(../asset/img/dia.jpg);
+		background-size: 100%;
+		background-repeat: no-repeat;
+
+	}
+}
+@media (min-width: 465px) and (max-width: 700px){
+	body{
+		background-image: url(../asset/img/atardecer.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+	}
+	img{
+		display: none;
+	}
+}
+@media (min-width: 1px) and (max-width: 499px){
+	body{
+		background-image:url(../asset/img/noche.jpg);
+		background-size: 100%;
+		background-repeat: no-repeat;
+	}
+}
