--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,24 @@
-body{
-	margin: 0 auto;
-	background-size: 100%;
-	
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-.container{
-	display: flex;
-	width: 100%;
-	height: 100%;
-	justify-content: center;
+body {
+    background-image: url("../img/manana.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-.imagen{
-	align-self: flex-end;
+
+section {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+img {
+    width: 20em;
+    padding: 4em;
 }
